# cmake_minimum_required(VERSION <specify CMake version here>)
project(learn_c)

set(CMAKE_CXX_STANDARD 11)

add_executable(learn_c
        2017/08/08/1.c
        2017/08/09/bzero.c
        2017/08/09/inet_ntop.c
        2017/08/09/memset.c
        2017/08/09/sockaddr_in.c
        2017/08/09/tinyhttpd.c
        2017/08/14/htonl.c
        2017/08/14/htons.c
        2017/08/15/file.c
        2017/08/15/geteuid.c
        2017/08/15/inet_addr.c
        2017/08/15/pointer.c
        2017/08/15/pointer2.c
        2017/08/15/pointer3.c
        2017/08/15/sizeof.c
        2017/08/16/pointer.c
        2017/08/16/pointer2.c
        2017/08/16/pointer3.c
        2017/08/16/pointer4.c
        2017/08/17/signal.c
        2017/08/18/setuid.c
        2017/08/21/inotify.c
        2017/08/21/thread1.c
        2017/08/21/thread2.c
        2017/08/21/thread3.c
        2017/08/22/init.c
        2017/08/22/macro.c
        2017/08/22/typeof.c
        2017/08/22/uftp-test.c
        2017/08/22/va_args.c
        2017/08/22/va_args2.c
        2017/08/22/va_args3.c
        2017/08/23/automake/hello.c
        2017/08/23/attribute.c
        2017/08/23/queue.c
        2017/08/24/getopt.c
        2017/08/24/getopt2.c
        2017/08/24/memmove.c
        2017/08/24/mq_open.c
        2017/08/24/offsetof.c
        2017/08/24/read.c
        2017/08/24/sprintf.c
        2017/08/24/strncpy.c
        2017/08/25/clamav.c
        2017/08/25/MySql.c
        2017/08/25/MySQL2.c
        2017/08/26/mqcreate.c
        2017/08/26/mqreceive.c
        2017/08/26/mqsend.c
        2017/08/29/msgreceive.c
        2017/08/29/msgsend.c
        2017/08/29/openlog.c
        2017/08/29/popen.c
        2017/08/29/system.c
        2017/08/31/conn.c
        2017/08/31/conn2.c
        2017/08/31/conn3.c
        2017/09/04/all.c
        2017/09/04/all2.c
        2017/09/04/getMAC.c
        2017/09/04/hello.c
        2017/09/07/check.c
        2017/09/08/client.c
        2017/09/08/gethostbyaddr.c
        2017/09/08/gethostbyname.c
        2017/09/08/inet_ntoa.c
        2017/09/08/server.c
        2017/09/12/udp/client.c
        2017/09/12/udp/server.c
        2017/09/12/udp2/client.c
        2017/09/12/udp2/server.c
        2017/09/12/udp3/client.c
        2017/09/12/udp3/server.c
        2017/09/13/udp/client.c
        2017/09/13/udp/server.c
        2017/09/15/tcp/client.c
        2017/09/15/tcp/server.c
        2017/09/15/udp/client.c
        2017/09/15/udp/server.c
        2017/09/15/udp2/1.c
        2017/09/15/udp2/2.c
        2017/09/15/udp2/client.c
        2017/09/15/udp2/client2.c
        2017/09/15/udp2/fgets.c
        2017/09/15/udp2/file.c
        2017/09/15/udp2/server.c
        2017/09/18/file/file_read.c
        2017/09/18/file/file_writer.c
        2017/09/18/file/fread.c
        2017/09/18/file/fread2.c
        2017/09/18/fgets.c
        2017/09/18/file.h
        2017/09/18/gets.c
        2017/09/18/rename.c
        2017/09/19/socks.c
        2017/09/20/char.c
        2017/09/20/httpproxy.c
        2017/09/20/strstr.c
        2017/09/21/process/execlp.c
        2017/09/21/process/fork.c
        2017/09/21/process/fork2.c
        2017/09/21/process/main.c
        2017/09/21/process/vfork.c
        2017/09/21/process/wait.c
        2017/09/21/client.c
        2017/09/21/server.c
        2017/09/22/countdown.c
        2017/09/22/func.c
        2017/09/22/jmp.c
        2017/09/22/static.c
        2017/09/22/stdarg.c
        2017/09/22/test.c
        2017/09/22/test.h
        2017/09/25/tcp/client.c
        2017/09/25/tcp/server.c
        2017/09/25/tcp2/client.c
        2017/09/25/tcp2/server.c
        2017/09/25/countdown.c
        2017/09/26/system.c
        2017/09/26/xx.c
        2017/09/27/pthread/1.c
        2017/09/27/pthread/2.c
        2017/09/27/pthread/3.c
        2017/09/27/pthread/4.c
        2017/09/27/pthread/5.c
        2017/09/27/pthread/thread.c
        2017/09/27/semaphore/1.c
        2017/09/27/semaphore/2.c
        2017/09/27/semaphore/3.c
        2017/09/27/semaphore/4.c
        2017/09/27/semaphore/5.c
        2017/09/27/semaphore/6.c
        2017/09/27/semaphore/7.c
        2017/09/27/semaphore/mmap.c
        2017/09/27/semaphore/mmap2.c
        2017/09/27/client.c
        2017/09/27/server.c
        2017/09/28/1.c
        2017/09/28/2.c
        2017/09/29/client.c
        2017/09/29/queue.c
        2017/09/29/queue.h
        2017/09/29/server.c
        2017/10/09/atoi.c
        2017/10/09/byteorder.c
        2017/10/09/c.c
        2017/10/09/c2.c
        2017/10/09/client.c
        2017/10/09/fdset.c
        2017/10/09/inet_.c
        2017/10/09/inet_pton.c
        2017/10/09/inet_xxxx.c
        2017/10/09/s.c
        2017/10/09/s2.c
        2017/10/09/server.c
        2017/10/10/af_inet.c
        2017/10/11/md5-2.c
        2017/10/11/md5.c
        2017/10/12/tcp/client.c
        2017/10/12/tcp/server.c
        2017/10/12/udp/client.c
        2017/10/12/udp/server.c
        2017/10/12/addr.c
        2017/10/12/show_byte.c
        2017/10/12/test.c
        2017/10/12/unsigned.c
        2017/10/13/autotools/get.c
        2017/10/13/autotools/get.h
        2017/10/13/autotools/main.c
        2017/10/13/autotools/sum.c
        2017/10/13/autotools/sum.h
        2017/10/13/autotools/val.c
        2017/10/13/autotools/val.h
        2017/10/15/include/pr.h
        2017/10/15/src/hello.c
        2017/10/16/sql.c
        2017/10/17/auto/src/p1/p1.c
        2017/10/17/auto/src/p2/p2.c
        2017/10/17/auto/src/main.c
        2017/10/17/auto/config.h
        2017/10/17/autotools/amhello-1.0/src/main.c
        2017/10/17/autotools/src/main.c
        2017/10/17/autotools/config.h
        2017/10/17/inotify/inotify.c
        2017/10/17/inotify/main.c
        2017/10/17/inotify-sample/event_queue.c
        2017/10/17/inotify-sample/event_queue.h
        2017/10/17/inotify-sample/inotify_test.c
        2017/10/17/inotify-sample/inotify_utils.c
        2017/10/17/inotify-sample/inotify_utils.h
        2017/10/17/mkdir.c
        2017/10/18/daemon/2.c
        2017/10/18/daemon/3.c
        2017/10/18/daemon/4.c
        2017/10/18/daemon/5.c
        2017/10/18/daemon/daemon.c
        2017/10/18/daemon/main.c
        2017/10/18/ini/main.c
        2017/10/18/mq/main.c
        2017/10/18/mq/mq.c
        2017/10/18/mq/mq.h
        2017/10/18/mq/recv.c
        2017/10/18/mq/send.c
        2017/10/18/redis/1.c
        2017/10/18/redis/main.c
        2017/10/18/sqlite/create.c
        2017/10/18/sqlite/delete.c
        2017/10/18/sqlite/insert.c
        2017/10/18/sqlite/main.c
        2017/10/18/sqlite/select.c
        2017/10/18/sqlite/update.c
        2017/10/19/iniparser/example/iniexample.c
        2017/10/19/iniparser/example/parse.c
        2017/10/19/iniparser/src/dictionary.c
        2017/10/19/iniparser/src/dictionary.h
        2017/10/19/iniparser/src/iniparser.c
        2017/10/19/iniparser/src/iniparser.h
        2017/10/19/iniparser/src/parse.c
        2017/10/19/iniparser/src/parse2.c
        2017/10/19/iniparser/test/CuTest.c
        2017/10/19/iniparser/test/CuTest.h
        2017/10/19/iniparser/test/test_dictionary.c
        2017/10/19/iniparser/test/test_iniparser.c
        2017/10/20/epoll/client.c
        2017/10/20/epoll/server.c
        2017/10/20/tcp/client.c
        2017/10/20/tcp/server.c
        2017/10/20/udp/client.c
        2017/10/20/udp/server.c
        2017/10/25/caddr_t.c
        2017/10/25/snprintf.c
        2017/10/25/stat.c
        2017/10/25/vsprintf.c
        2017/10/26/create.c
        2017/10/26/db_log.c
        2017/10/26/db_log.h
        2017/10/26/ini.c
        2017/10/26/log.c
        2017/10/26/struct.c
        2017/10/26/time.c
        2017/10/27/float.c
        2017/10/27/rand.c
        2017/10/30/malloc.c
        2017/10/30/popen.c
        2017/10/30/rand.c
        2017/10/30/random.c
        2017/10/30/s1.c
        2017/10/30/struct.c
        2017/10/31/1.c
        2017/10/31/2.c
        2017/10/31/mkfifo.c
        2017/10/31/mkfifo2.c
        2017/10/31/pipe.c
        2017/10/31/pipe2.c
        2017/10/31/pipe3.c
        2017/10/31/pipe4.c
        2017/10/31/pipe5.c
        2017/10/31/pipe6.c
        2017/10/31/pipe7.c
        2017/10/31/readlink.c
        2017/10/31/strstr.c
        2017/10/31/symlink.c
        2017/11/01/log.c
        2017/11/01/log2.c
        2017/11/02/1.c
        2017/11/02/vfprintf.c
        2017/11/03/cJSON/cJSON.c
        2017/11/03/cJSON/cJSON.h
        2017/11/03/cJSON/test.c
        2017/11/03/json.c
        2017/11/03/notify.c
        2017/11/06/character.c
        2017/11/10/1.c
        2017/11/14/bytetostring.c
        2017/11/15/1.c
        2017/11/15/2.c
        2017/11/15/main.c
        2017/11/15/main.h
        2017/11/16/1.c
        2017/11/20/1.c
        2017/11/20/2.c
        2017/11/21/1.c
        2017/11/21/2.c
        2017/11/21/3.c
        2017/11/21/4.c
        2017/11/21/5.c
        2017/11/21/6.c
        2017/11/21/7.c
        2017/11/21/const.c
        2017/11/21/server.c
        2017/11/21/wrap.c
        2017/11/21/wrap.h
        2017/11/22/1.c
        2017/11/23/1.c
        2017/11/23/2.c
        2017/11/29/1.c
        algorithm/bsearch.c
        pointer/1.c
        pointer/2.c
        pointer/3.c
        pointer/4.c
        pointer/5.c
        pointer/6.c
        pointer/7.c
        sql/mysql/conn.c
        sql/mysql/conn2.c
        sql/mysql/database.c
        sql/mysql/database.h
        sql/mysql/mysql.c
        sql/mysql/select.c
        sql/sqlite/1.c
        sql/sqlite/2.c
        sql/sqlite/3.c
        sql/sqlite/log.c
        sql/sqlite/log.h
        sql/sqlite/main.c
        string/1.c
        string/2.c
        string/atoi.c
        string/strcmp.c
        string/strstr.c
        string/strtok.c
        udp-demo/client.c
        udp-demo/server.c)
