cmake_minimum_required(VERSION 3.7.2)
project(1)

set(CMAKE_CXX_STANDARD 11)

add_executable(
        1
        #        07/2.c
#        08/fork.c 08/clamscan.h 08/clamavtest.c 08/wait.c 08/wait2.c 08/waitpid.c 08/waitpid2.c 08/continue.c
#        09/clamavtest.c
#        09/pthread.c 09/clamavtest.h
#        11/uftp.c 11/server.c 11/client.c
#        11/struct.c
#        12/read.c 12/fread.c 12/fwrite_int.c 12/fread_int.c 12/fwrite_struct.c 12/fread_struct.c
#        15/free.c
        15/free2.c)

