cmake_minimum_required(VERSION 3.7.2)
project(1)

set(CMAKE_CXX_STANDARD 11)

add_executable(
        02
#        01/tsd.c
#        01/mutex.c 01/server.c 01/client.c 01/isalpha.c 01/tcp/server.c 01/tcp/client.c 01/udp/client.c 01/udp/server.c
#        02/md5.c
#        02/md5.h 02/main.c
        05/1.c
        22/getpwnam.c 22/argv.c 22/dir.c 22/flag.c 22/attribute.c 22/attribute2.c 22/attribute3.c 22/attribute4.c 22/version.c 22/getpwuid.c 22/getpwnam_r.c 22/stat.c 23/main.c 23/1.c)
