add_executable(isalnum isalnum.c)
add_executable(isalpha isalpha.c)
add_executable(isascii isascii.c)
add_executable(iscntrl iscntrl.c)
add_executable(isdigit isdigit.c)
add_executable(islower islower.c)
add_executable(isgraph isgraph.c)
add_executable(isprint isprint.c)
add_executable(ispunct ispunct.c)
add_executable(isblank isblank.c)
add_executable(isxdigit isxdigit.c)
add_executable(isupper isupper.c)
add_executable(isspace isspace.c)
