add_executable(atof atof.c)
add_executable(atoi atoi.c)
add_executable(atol atol.c)
add_executable(strtod strtod.c)
add_executable(strtof strtof.c)
add_executable(random random.c)
add_executable(malloc malloc.c)
add_executable(calloc calloc.c)
add_executable(realloc realloc.c)
add_executable(strtol strtol.c)
add_executable(system system.c)
add_executable(div div.c)
add_executable(drand48 drand48.c)
add_executable(ecvt ecvt.c)