add_executable(bzero bzero.c)
add_executable(memset memset.c)
add_executable(memcpy memcpy.c)
add_executable(memchr memchr.c)
add_executable(memcmp memcmp.c)
add_executable(memmove memmove.c)
add_executable(memccpy memccpy.c)
add_executable(strcat strcat.c)
add_executable(strchr strchr.c)
add_executable(strcmp strcmp.c)
add_executable(strncmp strncmp.c)
add_executable(strcoll strcoll.c)
add_executable(strxfrm strxfrm.c)
add_executable(strdup strdup.c)
add_executable(strndup strndup.c)

