add_executable(access access.c)
add_executable(alarm alarm.c)
add_executable(pause pause.c)
add_executable(chdir chdir.c)
add_executable(getcwd getcwd.c)
add_executable(getdtablesize getdtablesize.c)
add_executable(gethostid gethostid.c)
add_executable(getlogin getlogin.c)
add_executable(geteuid geteuid.c)
add_executable(read read.c)
add_executable(sysconf sysconf.c)