add_executable(access access.c)
add_executable(alarm alarm.c)
add_executable(pause pause.c)
add_executable(chdir chdir.c)
add_executable(getcwd getcwd.c)
add_executable(getdtablesize getdtablesize.c)
add_executable(gethostid gethostid.c)
add_executable(getlogin getlogin.c)
add_executable(geteuid geteuid.c)
add_executable(read read.c)
add_executable(sysconf sysconf.c)
add_executable(getentropy getentropy.c)
add_executable(pread pread.c)
add_executable(pwrite pwrite.c)
add_executable(dup dup.c)
add_executable(pipe pipe.c)
add_executable(getgid getgid.c)
add_executable(cuserid cuserid.c)
add_executable(crypt1 crypt.c)
target_link_libraries(crypt1 crypt)
add_executable(confstr confstr.c)
add_executable(ctermid ctermid.c)
add_executable(getegid getegid.c)
add_executable(chroot chroot.c)
add_executable(chown chown.c)
add_executable(chown2 chown2.c)
add_executable(chown3 chown3.c)
add_executable(fork fork.c)
add_executable(vfork vfork.c)
add_executable(isatty isatty.c)
add_executable(ttyname ttyname.c)
add_executable(ttyname_r ttyname_r.c)
add_executable(link link.c)
add_executable(symlink symlink.c)
add_executable(sleep sleep.c)
