#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello], [1.0], [599490911@qq.com])
AC_CONFIG_SRCDIR([include/pr.h])
AC_CONFIG_SRCDIR([src/hello.c]) #用来侦测所指定的源码文件是否存在
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([hello],[1.0]) #指示可执行名称+版本号，用于生成makefile

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile]) #用于生成相应的Makefile 文件。
AC_OUTPUT
