add_executable(1-1 1-1.c)
add_executable(1-2 1-2.c)
add_executable(1-3 1-3.c)
add_executable(1-4 1-4.c)
add_executable(1-5 1-5.c)
add_executable(1-6 1-6.c)
add_executable(1-7 1-7.c)
add_executable(1-8 1-8.c)
add_executable(1-9 1-9.c)
add_executable(1-10 1-10.c)
add_executable(1-12 1-12.c)
add_executable(1-13 1-13.c)
add_executable(1-14 1-14.c)
add_executable(1-15 1-15.c)
add_executable(1-16 1-16.c)